[gd_scene load_steps=20 format=3 uid="uid://drbx1k3n814mg"]

[ext_resource type="Script" path="res://vase_minigame.gd" id="1_ykelr"]
[ext_resource type="Texture2D" uid="uid://b1fynu0dglwbt" path="res://book.png" id="2_qlnlb"]
[ext_resource type="Script" path="res://Vase.gd" id="3_b573w"]
[ext_resource type="Texture2D" uid="uid://c3gkxnatnnsgd" path="res://Finished Images/vase.png" id="4_klvc3"]
[ext_resource type="AudioStream" uid="uid://8i3oyujkro8v" path="res://Audio/vase break.wav" id="5_2tyrp"]
[ext_resource type="Texture2D" uid="uid://b1jym6qt5r3gq" path="res://background.png" id="5_chai6"]
[ext_resource type="Texture2D" uid="uid://x8q07xa1uaoi" path="res://vase_background.png" id="7_4gwpa"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cnxa3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qlnlb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdasc"]
size = Vector2(319.167, 378.333)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf2b5"]
atlas = ExtResource("4_klvc3")
region = Rect2(0, 0, 300, 188)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0jl3"]
atlas = ExtResource("4_klvc3")
region = Rect2(300, 0, 300, 188)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ai4"]
atlas = ExtResource("4_klvc3")
region = Rect2(600, 0, 300, 188)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa37b"]
atlas = ExtResource("4_klvc3")
region = Rect2(900, 0, 300, 188)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp11d"]
atlas = ExtResource("4_klvc3")
region = Rect2(1200, 0, 300, 188)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb1jh"]
atlas = ExtResource("4_klvc3")
region = Rect2(0, 0, 300, 188)

[sub_resource type="SpriteFrames" id="SpriteFrames_b6ge6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf2b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0jl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ai4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa37b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp11d")
}],
"loop": false,
"name": &"break",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb1jh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6360d"]
size = Vector2(287, 319)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi1j2"]
size = Vector2(1728, 202)

[sub_resource type="SpriteFrames" id="SpriteFrames_y7r3u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_chai6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_4gwpa")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="VaseMinigame" type="Node2D"]
script = ExtResource("1_ykelr")

[node name="Bookshelf" type="Area2D" parent="."]
position = Vector2(553, 556)
scale = Vector2(1.2, 1.2)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Bookshelf"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_cnxa3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bookshelf"]
position = Vector2(2.91669, -32.5)
shape = SubResource("RectangleShape2D_mdasc")

[node name="Vase" type="Area2D" parent="." groups=["vase"]]
position = Vector2(383, 291)
rotation = -0.0174533
scale = Vector2(0.8, 0.8)
script = ExtResource("3_b573w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Vase"]
position = Vector2(1.75812, 243.068)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_b6ge6")
animation = &"break"
offset = Vector2(0, -200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vase"]
position = Vector2(-1.15468, -163.045)
shape = SubResource("RectangleShape2D_6360d")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Vase"]
stream = ExtResource("5_2tyrp")
volume_db = -10.0

[node name="Ground" type="Area2D" parent="." groups=["ground"]]
position = Vector2(355, 727)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(310, 11)
shape = SubResource("RectangleShape2D_mi1j2")

[node name="TimerLabel" type="RichTextLabel" parent="."]
offset_left = 764.0
offset_top = 10.0
offset_right = 1135.0
offset_bottom = 164.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Seconds Elapsed: 0/30"

[node name="ResultLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 772.0
offset_top = 161.0
offset_right = 1150.0
offset_bottom = 316.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Failed! -5 Karma"

[node name="HintLabel" type="RichTextLabel" parent="."]
offset_left = 8.0
offset_top = 562.0
offset_right = 1162.0
offset_bottom = 716.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Use the left and right keys to stabilize the vase!"

[node name="BG" type="Area2D" parent="."]
z_index = -10
position = Vector2(651, 355)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BG"]
sprite_frames = SubResource("SpriteFrames_y7r3u")
animation = &"new_animation"
offset = Vector2(-10, 0)

[connection signal="area_entered" from="Vase" to="Vase" method="_on_area_entered"]
[connection signal="vase_broken" from="Vase" to="." method="_on_vase_vase_broken" flags=6]
